--- a/params.config
+++ b/params.config
@@ -3,22 +3,20 @@
 # be of the form (x, y, z), etc.
 
 # The files that contain the training and test image paths and the class names.
-classnames_file:      "test/classnames.txt"
-train_img_paths_file: "test/trainImNames.txt"
-test_img_paths_file:  "test/test1ImNames.txt"
+classnames_file:      "../classnames.txt"
+train_img_paths_file: "../trainImNames.txt"
+test_img_paths_file:  "../testImNames.txt"
 
 # Data specifications.
-number_of_classes:    25
-train_imgs_per_class: 100
-test_imgs_per_class:  20
+number_of_classes:    6
 
 # Dimensions of the training image: width, height, num channels.
 # Number of channels should be 1 (grayscale) or 3 (RGB).
-img_dimensions:       (128, 128, 1)
+img_dimensions:       (80, 80, 3)
 
 # Training hyperparameters.
-batch_size:           32
-num_epochs:           10
+batch_size:           256
+num_epochs:           50
 learning_rate:        0.01
 decay:                1e-6
 momentum:             0.9
